workloads/home/api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app.kubernetes.io/name: api-service
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: vgu-graduation
spec:
  selector:
    app.kubernetes.io/name: api-service
  ports:
    - name: http
      port: 4000
      targetPort: http
